# deep-research-agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  sonar-project.properties  start.sh
.github/workflows/: sonar.yml  sync-to-hub.yml
src/focused_research_agent/: __main__.py  cli.py  graph.py  state.py
src/focused_research_agent/api/: __init__.py  api_exception_handlers.py  app.py  dependencies.py
src/focused_research_agent/application/: __init__.py  chat_use_case.py  exceptions.py  question_validation.py  report_use_case.py  research_use_case.py
src/focused_research_agent/config/: api_config.py  database_config.py  llm_config.py  logger_config.py  search_config.py  ui_config.py
src/focused_research_agent/database/: database.py  models.py  repository.py
src/focused_research_agent/interfaces/: llm_interface.py  search_interface.py
src/focused_research_agent/nodes/: finalize_run.py  generate_queries.py  handle_error.py  init_run.py  scope_question.py  search_web.py  synthesize_answer.py
src/focused_research_agent/services/: llm_factory.py  llm_provider_groq.py  llm_provider_ollama.py  llm_provider_openai.py  search_factory.py  (+1 more)
tests/: conftest.py  test_api_chat.py  test_api_health.py  test_api_report.py  test_api_research.py  test_chat_use_case.py  test_cli_helpers.py  test_config_and_factories.py  test_database_repository.py  test_graph_error_paths.py  test_nodes_smoke.py  test_nodes_unit.py  test_providers_unit.py  test_report_use_case.py  test_research_use_case.py  test_ui_api_client.py
(+20 files in other folders)
