[project]
name = "focused-research-agent"
version = "0.1.0"
description = "A LangGraph-based focused research agent with LLM planning and Tavily web search"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.135.3",
    "httpx>=0.28.0",
    "langgraph==1.0.10",
    "langchain==1.2.10",
    "streamlit==1.52.2",
    "uvicorn==0.40.0",
    "python-dotenv==1.2.2",
    "tavily-python==0.7.22",
    "langchain-groq==1.1.2",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
    "ollama>=0.6.2",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.7",
]

[tool.coverage.run]
omit = [
    "src/focused_research_agent/ui/views.py",
    "src/focused_research_agent/ui/Home.py",
    "src/focused_research_agent/ui/pages/1_🔍_Research.py",
    "src/focused_research_agent/ui/pages/2_💬_Chat.py",
    "src/focused_research_agent/ui/pages/3_📄_Report.py",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
focused-research-agent = "focused_research_agent.cli:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]
